@startuml UML_4_GUI
title GUI & Application

package application {
    class Main {
        + {static} void main(String[])
    }
}

package gui {
    class GameApp {
        - {static} int WINDOW_WIDTH
        - {static} int WINDOW_HEIGHT
        - {static} int TILE
        - {static} int HUMAN_REACTION_RANGE
        - {static} long PLAYER_MOVE_ANIM_NANOS
        - {static} long EASTER_EGG_MAX_GAP_NANOS
        - Stage stage
        - GameEngine engine
        - GameSession session
        - LevelId currentLevelId
        - Label hpLabel
        - Label staminaLabel
        - Label levelLabel
        - Label statusLabel
        - ProgressBar hpBar
        - ProgressBar staminaBar
        - Canvas gameCanvas
        - AnimationTimer renderTimer
        - boolean gameOverHandled
        - long animationStartNanos
        - double renderPlayerX
        - double renderPlayerY
        - double moveFromX
        - double moveFromY
        - double moveToX
        - double moveToY
        - long playerMoveStartNanos
        - boolean playerMoveAnimating
        - int easterEggProgress
        - long easterEggLastInputNanos
        + void start(Stage)
        - void showStartScene()
        - void showHowToPlayScene()
        - void showOpeningScene(int)
        - void showLevelSelectScene()
        - void startGameWithLevel(int)
        - void showGameScene(LevelId)
        - void handlePlayerMove(Direction)
        - void startPlayerMoveAnimation(int, int)
        - void updatePlayerAnimation()
        - void syncPlayerRenderPosition()
        - void startRenderLoop()
        - void stopRenderLoop()
        - void handleWin()
        - void handleLose()
        - void showLoseScene()
        - void refreshGameView()
        - void drawBoard()
        - boolean handleEasterEggKey(KeyCode)
        - boolean matchesEasterEggStep(int, KeyCode)
        - HBox createHudRow(String, ProgressBar, Label)
        - Button createMainButton(String)
        - void applyHoverEffect(Button)
    }

    class ImageLoader {
        - {static} Map<String, Image> cache
        + {static} Image loadImage(String, int, int)
        + {static} Image loadImage(String)
        + {static} void clearCache()
    }

    class SoundManager {
        - {static} double volume
        - {static} boolean muted
        + {static} void playBackgroundLoop()
        + {static} void stopBackground()
        + {static} void playClick()
        + {static} void playWin()
        + {static} void playLose()
        + {static} void playWalk()
        + {static} void playPickUp()
        + {static} void playHurt()
        + {static} void playType()
        + {static} void stopType()
        + {static} void playOpening(int)
        + {static} void stopOpening()
        + {static} void playEnding(int)
        + {static} void stopEnding()
        + {static} void increaseVolume()
        + {static} void decreaseVolume()
        + {static} void setVolume(double)
        + {static} double getVolume()
        + {static} void toggleMute()
        + {static} void mute()
    }

    class RewardScreen {
        - Stage stage
        - List<Reward> rewards
        - int currentLevelNumber
        - Runnable onNextLevel
        - Runnable onMainMenu
        + RewardScreen(Stage, List<Reward>, int)
        + void setOnNextLevel(Runnable)
        + void setOnMainMenu(Runnable)
        + Scene createScene()
    }
}

' JavaFX Application (external)
class Application <<JavaFX>> {
    + {abstract} void start(Stage)
}

' Inheritance
Application <|-- GameApp : extends

' Entry point
Main ..> GameApp : <<launches>>

' Composition: GameApp owns engine and session
GameApp "1" *-- "1" logic.game.GameEngine : engine
GameApp "1" *-- "1" logic.game.GameSession : session
GameApp "1" --> "1" logic.game.LevelId : currentLevelId

' GameApp uses utilities
GameApp ..> ImageLoader : <<uses>>
GameApp ..> SoundManager : <<uses>>

' GameApp creates RewardScreen on level complete
GameApp ..> RewardScreen : <<creates>>

' RewardScreen aggregates rewards
RewardScreen "1" o-- "0..*" rewards.Reward : rewards

@enduml
